package protocol;

import "protocol/packetid.proto";

message SCGateInfo {
	required MmoPacketID PacketId = 1 [default=PACKET_SC_GATEINFO];
	optional int32 SrvType = 2;
	optional int32 SrvId = 3;
	optional string AuthKey = 4;
	optional string Ip = 5;
	optional int32 Port = 6;
}